--- a/DjangoProj/DjangoProj/templates/home.html
+++ b/DjangoProj/DjangoProj/templates/home.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
+  Hi {{ user.username }}!<br>
+  <a href="{% url 'logout' %}">Logout</a>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
