added examination html fileQ

--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -3,5 +3,13 @@
 {% block title %}Exam{% endblock %}
 
 {% block content %}
+<h2>Examination</h2>
 
+<form>
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+  Last name:<br>
+  <input type="text" name="lastname">
+</form>
 {% endblock %}
