added fields to exam

--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -9,7 +9,73 @@
   Height:<br>
   <input type="text" name="firstname">
   <br><br>
+
   Last name:<br>
   <input type="text" name="lastname">
+  <br><br>
+
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+    Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+  Last name:<br>
+  <input type="text" name="lastname">
+  <br><br>
+
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+    Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+  Last name:<br>
+  <input type="text" name="lastname">
+  <br><br>
+
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+    Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+  Last name:<br>
+  <input type="text" name="lastname">
+  <br><br>
+
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+    Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+  Last name:<br>
+  <input type="text" name="lastname">
+  <br><br>
+
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+    Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
+
+  Last name:<br>
+  <input type="text" name="lastname">
+  <br><br>
+  
+  Height:<br>
+  <input type="text" name="firstname">
+  <br><br>
 </form>
 {% endblock %}
