--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -7,75 +7,94 @@
 
 <form>
   Height:<br>
-  <input type="text" name="firstname">
+  <input type="number" name="Height">
   <br><br>
 
-  Last name:<br>
-  <input type="text" name="lastname">
+  Weight:<br>
+  <input type="number" name="Weight">
   <br><br>
 
-  Height:<br>
-  <input type="text" name="firstname">
+  Heart Rate:<br>
+  <input type="number" name="HeartRate">
   <br><br>
 
-    Height:<br>
-  <input type="text" name="firstname">
+  Heart Rhythm:<br>
+  <input type="number" name="HeartRhythm">
   <br><br>
 
-  Last name:<br>
-  <input type="text" name="lastname">
+  Oxygen Saturation:<br>
+  <input type="number" name="OxygenSaturation">
   <br><br>
 
-  Height:<br>
-  <input type="text" name="firstname">
+  Blood Pressure:<br>
+  <input type="number" name="BloodPressure">
   <br><br>
 
-    Height:<br>
-  <input type="text" name="firstname">
+  Urinalysis Glucose:<br>
+  <input type="number" name="UrinalysisGlucose">
   <br><br>
 
-  Last name:<br>
-  <input type="text" name="lastname">
+  Urinalysis Blood:<br>
+  <input type="number" name="UrinalysisBlood">
   <br><br>
 
-  Height:<br>
-  <input type="text" name="firstname">
+  Urinalysis Protein:<br>
+  <input type="number" name="UrinalysisProtein">
   <br><br>
 
-    Height:<br>
-  <input type="text" name="firstname">
+  Blood Count:<br>
+  <input type="number" name="BloodCount">
   <br><br>
 
-  Last name:<br>
-  <input type="text" name="lastname">
+  Fasting Glucose:<br>
+  <input type="number" name="FastingGlucose">
   <br><br>
 
-  Height:<br>
-  <input type="text" name="firstname">
+  Overall Cholesterol:<br>
+  <input type="number" name="OverallCholesterol">
   <br><br>
 
-    Height:<br>
-  <input type="text" name="firstname">
+  HDL Cholesterol:<br>
+  <input type="number" name="HDLCholesterol">
   <br><br>
 
-  Last name:<br>
-  <input type="text" name="lastname">
+  LDL Cholesterol:<br>
+  <input type="number" name="LDLCholesterol">
   <br><br>
 
-  Height:<br>
-  <input type="text" name="firstname">
+  Uric Acid:<br>
+  <input type="number" name="UricAcid">
   <br><br>
 
-    Height:<br>
-  <input type="text" name="firstname">
+  Triglyceride:<br>
+  <input type="number" name="Triglyceride">
   <br><br>
 
-  Last name:<br>
-  <input type="text" name="lastname">
+  How many cigarettes per day?:<br>
+  <input type="number" name="Cigarettesperday">
   <br><br>
-  
-  Height:<br>
-  <input type="text" name="firstname">
+
+  How much alcohol per week:<br>
+  <input type="number" name="Alcoholperweek">
   <br><br>
+
+  Use of recreational drugs?:<br>
+  <input type="checkbox" name="RecreationalDrugs">
+  <br><br>
+
+  Does the patient exercise:<br>
+  <input type="checkbox" name="Exercise">
+  <br><br>
+
+  Does the patient have a healthy diet?:<br>
+  <input type="number" name="HealthyDiet">
+  <br><br>
+
+  Patient:<br>
+  <input type="text" name="Patient">
+  <br><br>
+
+  Doctor:<br>
+  <input type="text" name="Doctor">
 </form>
 {% endblock %}
