examination screen shows up after logging in

--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -78,16 +78,16 @@
   <input type="number" name="Alcoholperweek">
   <br><br>
 
-  Use of recreational drugs?:<br>
+  Use of recreational drugs?:&nbsp;&nbsp;
   <input type="checkbox" name="RecreationalDrugs">
   <br><br>
 
-  Does the patient exercise:<br>
+  Does the patient exercise:&nbsp;&nbsp;
   <input type="checkbox" name="Exercise">
   <br><br>
 
-  Does the patient have a healthy diet?:<br>
-  <input type="number" name="HealthyDiet">
+  Does the patient have a healthy diet?:&nbsp;&nbsp;
+  <input type="checkbox" name="HealthyDiet">
   <br><br>
 
   Patient:<br>
@@ -96,5 +96,7 @@
 
   Doctor:<br>
   <input type="text" name="Doctor">
+	<br><br>
+  <button type="submit">Process Exam</button>
 </form>
 {% endblock %}
