--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -7,7 +7,7 @@
 
 <form method="post">
 	{% csrf_token %}
-  Height:<br>
+  <!-- Height:<br>
   <input type="number" name="Height">
   <br><br>
 
@@ -97,7 +97,8 @@
 
   Doctor:<br>
   <input type="text" name="Doctor">
-	<br><br>
+	<br><br> -->
+  {{ form.as_p }}
   <button type="submit">Process Exam</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
 </form>
 {% endblock %}
