--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -101,4 +101,5 @@
   {{ form.as_p }}
   <button type="submit">Process Exam</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
 </form>
+<h2>{{ exam_input }}</h2>
 {% endblock %}
