--- a/DjangoProj/DjangoProj/templates/results.html
+++ b/DjangoProj/DjangoProj/templates/results.html
@@ -3,11 +3,8 @@
 {% block title %}Results{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-  Height is {{ Examination.height }}<br>
+{% for exam in exams %}
+	  Height is {{ exam.height }}<br>
+{% endfor %}
   <a href="{% url 'exam' %}">Perform Another Exam</a>
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">login</a>
-{% endif %}
 {% endblock %}
