--- a/DjangoProj/DjangoProj/templates/results.html
+++ b/DjangoProj/DjangoProj/templates/results.html
@@ -7,6 +7,13 @@
 Exam performed by {{ exam.user.get_full_name }}<br>
 Time is {{ exam.date }}<br>
 Fields are {{ exam }}<br><br>
+{% if prediction == 0 %}
+	Prediction: Patient is unlikely to have heart disease <br>
+{% endif %}
+
+{% if prediction == 1 %}
+	Prediction: Patient is likely to have heart disease <br>
+{% endif %}
 <!-- {% endfor %} -->
   <a href="{% url 'exam' %}">Perform Another Exam</a>
 {% endblock %}
