--- a/DjangoProj/DjangoProj/templates/patient.html
+++ b/DjangoProj/DjangoProj/templates/patient.html
@@ -16,7 +16,7 @@
 
     <form method="post">
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ Createform.as_p }}
       <button type="submit">Create Patient</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
     </form>
     <!-- <h2>{{ exam_input }}</h2> -->
