--- a/DjangoProj/DjangoProj/templates/patient.html
+++ b/DjangoProj/DjangoProj/templates/patient.html
@@ -16,8 +16,14 @@
 
     <form method="post">
       {% csrf_token %}
+      {{ Selectform.as_p }}
+      <input name="select_patient" type="submit" value="Select" />
+    </form>
+
+    <form method="post">
+      {% csrf_token %}
       {{ Createform.as_p }}
-      <button type="submit">Create Patient</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
+      <input name="create_patient" type="submit" value="Create" />&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
     </form>
     <!-- <h2>{{ exam_input }}</h2> -->
 
