--- a/DjangoProj/DjangoProj/templates/results.html
+++ b/DjangoProj/DjangoProj/templates/results.html
@@ -3,10 +3,8 @@
 {% block title %}Results{% endblock %}
 
 {% block content %}
-<!-- {% for exam in exams %} -->
-Exam performed by {{ exam.user.get_full_name }}<br>
-Time is {{ exam.date }}<br>
-Fields are {{ exam }}<br><br>
+
+Fields are {{ heart_vals }}<br><br>
 {% if prediction == 0 %}
 	Prediction: Patient is unlikely to have heart disease <br>
 {% endif %}
