--- a/DjangoProj/DjangoProj/templates/exam.html
+++ b/DjangoProj/DjangoProj/templates/exam.html
@@ -15,7 +15,7 @@
       {{ form.as_p }}
       <button type="submit">Process Exam</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
     </form>
-    <h2>{{ exam_input }}</h2>
+    <!-- <h2>{{ exam_input }}</h2> -->
 
   </main>
 </body>
