table looks nice

--- a/Project/DjangoProj/templates/exam.html
+++ b/Project/DjangoProj/templates/exam.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Exam</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/Form.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Form.css' %}">
 </head>
 <body>
   <main>
