--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -1,13 +1,70 @@
 {% load static %}<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Results</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  </head>
+  <body>
+    <div class="container">
+      <ol class="breadcrumb my-4">
+        <li class="breadcrumb-item active">The Results of the Exam are as Follows</li>
+      </ol>
+      <table class="table">
+        <thead class="thead-inverse">
+          <tr class="bg-dark text-white">
+            <th>Disease</th>
+            <th>Prediction</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td>
+                Diabetes
+              </td>
+              <td class="align-middle">
+              	{% if diabetes_pred == 0 %}
+					Patient is unlikely to have diabetes <br>
+				{% endif %}
+
+				{% if diabetes_pred == 1 %}
+					Patient is likely to have diabetes <br>
+				{% endif %}
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Heart Disease
+              </td>
+              <td class="align-middle">
+				{% if heart_pred == 0 %}
+					Patient is unlikely to have heart disease <br>
+				{% endif %}
+
+				{% if heart_pred == 1 %}
+					Patient is likely to have heart disease <br>
+				{% endif %}
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
+</html>
+
+
+<!-- {% load static %}<!DOCTYPE html>
+<html>
 	<head>
 	  <meta charset="utf-8">
 	  <title>Results</title>
 	  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	  <link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Results.css' %}">
 	</head>
 	<body>
 	  <main>
-		<div id="heart_res" class="container p-3 my-3 border">
+		<div id="heart_res" class="container p-3 my-3 border bg-dark text-white">
+			<h3> Heart Disease Prediction </h3>
 			{% if heart_pred == 0 %}
 				Prediction: Patient is unlikely to have heart disease <br>
 			{% endif %}
@@ -17,7 +74,8 @@
 			{% endif %}
 		</div>
 
-		<div id="diabetes_res" class="container p-3 my-3 border">
+		<div id="diabetes_res" class="container p-3 my-3 border bg-dark text-white">
+			<h3> Diabetes Prediction </h3>
 			{% if diabetes_pred == 0 %}
 				Prediction: Patient is unlikely to have diabetes <br>
 			{% endif %}
@@ -31,5 +89,4 @@
 		  <a href="{% url 'patient' %}">Select Another Patient</a>
 	  </main>
 	</body>
-</html>
-
+</html> -->
