--- a/Project/DjangoProj/static/css/Custom/Results.css
+++ b/Project/DjangoProj/static/css/Custom/Results.css
@@ -1,13 +1,21 @@
-.heart_res,
-.diabetes_res
+.result
 {
 	float: left;
-/*	margin-top: 5em;
-	margin-left: 2em;*/
+	margin-top: 5em;
+	margin-left: 2em;
 	color: white;
 	max-width: 50%;
 	border-style: solid;
 	border-color: black;
+	border-radius: 10% 10% 0 0;
+}
+
+.result:after,
+.result:before
+{
+	content: "";
+	display: table;
+	clear: both
 }
 
 .display
@@ -15,11 +23,25 @@
 	background-color: white;
 	color: black;
 	width: 100%;
+	padding: 0.5em;
 }
 
-.heart_res h3,
-.diabetes_res h3
+.result h3
 {
 	width: 100%;
 	height: 100%;
+	padding: 0 0 0 0.4em;
+}
+
+.container:after,
+.container:before
+{
+	content: "";
+	display: table;
+	clear: both
+}
+
+.container
+{
+	
 }
