--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -1,4 +1,4 @@
-<!-- {% load static %}<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -50,23 +50,22 @@
       </table>
     </div>
   </body>
-</html> -->
+</html>
 
-
+<!-- 
 {% load static %}<!DOCTYPE html>
 <html>
 	<head>
 	  <meta charset="utf-8">
 	  <title>Results</title>
-	  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 	  <link rel = "stylesheet" href = "https://www.w3schools.com/lib/w3.css">
 	  <link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Results.css' %}">
 	</head>
-	<body>
+	<body style="text-align: center;">
 	  <main>
-		<div class="heart_res w3-container w3-black">
+		<div class="result w3-black">
 			<h3> Heart Disease Prediction </h3>
-			<div class="display w3-container">
+			<div class="display container">
 				{% if heart_pred == 0 %}
 					Patient is unlikely to have heart disease
 				{% endif %}
@@ -77,9 +76,9 @@
 			</div>
 		</div>
 
-		<div class="diabetes_res w3-container">
-			<h3 class="w3-container w3-black"> Diabetes Prediction </h3>
-			<div class="w3-container display">
+		<div class="result w3-black">
+			<h3> Diabetes Prediction </h3>
+			<div class="container display">
 				{% if diabetes_pred == 0 %}
 					Patient is unlikely to have diabetes
 				{% endif %}
@@ -94,4 +93,4 @@
 		  <a href="{% url 'patient' %}">Select Another Patient</a>
 	  </main>
 	</body>
-</html>
+</html> -->
