--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Results</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Results.css' %}"> -->
   </head>
   <body>
     <div class="container">
@@ -19,7 +20,7 @@
         </thead>
         <tbody>
             <tr>
-              <td>
+              <td class="disease">
                 Diabetes
               </td>
               <td class="align-middle">
@@ -33,7 +34,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="disease">
                 Heart Disease
               </td>
               <td class="align-middle">
