--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -52,7 +52,7 @@
       <div class="container">
       		{% csrf_token %}
 			{{ further_action_form.as_p }}
-			<button>Create Reminder</button>
+			<button class="btn btn-outline-dark">Create Reminder</button>
 	  </div>	
     </div>
   </body>
