--- a/Project/DjangoProj/templates/exam.html
+++ b/Project/DjangoProj/templates/exam.html
@@ -13,7 +13,7 @@
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Process Exam</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
+      <button type="submit" class="btn btn-primary">Process Exam</button>&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
     </form>
     <!-- <h2>{{ exam_input }}</h2> -->
 
