--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -34,7 +34,7 @@
           {% for p in searched_patients %}
             <tr>
               <td>
-               <a href="{% url 'patient_info' id=2 %}">{{ p.patient_name }}</a>
+               <a href="{% url 'patient_info' id=p.id %}">{{ p.patient_name }}</a>
               </td>
               <td class="align-middle">
                 {{ p.DOB }}
