only returning one patient now

--- a/Project/DjangoProj/templates/patient_info.html
+++ b/Project/DjangoProj/templates/patient_info.html
@@ -8,7 +8,7 @@
 	<body>
     <div class="container">
     	<h2>It worked</h2>
-      <p>{{ patient }}</p>
+      {{ patient.patient_name }}
 	</div>
 	</body>
 </html>
