--- a/Project/DjangoProj/templates/patient_info.html
+++ b/Project/DjangoProj/templates/patient_info.html
@@ -4,11 +4,31 @@
     <meta charset="utf-8">
     <title>Patient Info</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Navbar.css' %}">
   </head>
 	<body>
-    <div class="container">
-    	<h2>It worked</h2>
-      {{ patient.patient_name }}
+<!--     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+      <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">Patient</a>
+      <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-profile" aria-selected="false">Reminders</a>
+      <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-messages" aria-selected="false">Diary</a>
+      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-settings" aria-selected="false">Till</a>
+    </div> -->
+    <ul>
+      <li><a class="active" href="#Patients">Patient</a></li>
+      <li><a href="#Reminders">Reminders</a></li>
+      <li><a href="#Diary">Diary</a></li>
+      <li><a href="#Till">Till</a></li>
+    </ul>
+    <div class="container main">
+    	<h2>Patient Info</h2>
+      <input 
+        class="form-control mr-sm-2" 
+        type="search" 
+        placeholder="Search" 
+        aria-label="Search"
+        name="search"
+        value="{{ patient.patient_name }}" 
+      >
 	</div>
 	</body>
 </html>
