--- a/Project/DjangoProj/static/css/Custom/Navbar.css
+++ b/Project/DjangoProj/static/css/Custom/Navbar.css
@@ -3,7 +3,7 @@ ul
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 25%;
+  max-width: 20%;
   background-color: #f1f1f1;
   position: fixed;
   height: 100%;
@@ -20,7 +20,7 @@ li a
 
 li a.active 
 {
-  background-color: #4CAF50;
+  background-color: #343a40;
   color: white;
 }
 
@@ -32,7 +32,7 @@ li a:hover:not(.active)
 
 .main
 {
-  margin-left:25%;
+  margin-left:20%;
   padding:1px 16px;
   height:1000px;
 }
