--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -21,7 +21,7 @@
       <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
     </form>
 
-  {% if searched_patients is not null %}
+  {% if searched_patients is not None %}
     <table class="table">
         <thead class="thead-inverse">
           <tr class="bg-dark text-white">
@@ -34,7 +34,9 @@
           {% for p in searched_patients %}
             <tr>
               <td>
-               <a href="{% url 'patient_info' id=p.id %}">{{ p.patient_name }}</a>
+               <a href="{% url 'patient_info' id=p.id %}">
+               	{{ p.patient_name }}
+               </a>
               </td>
               <td class="align-middle">
                 {{ p.DOB }}
