--- a/Project/DjangoProj/templates/patient_info.html
+++ b/Project/DjangoProj/templates/patient_info.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Patient Info</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Custom/Navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Navbar.css' %}">
   </head>
 	<body>
     <ul>
@@ -13,107 +13,113 @@
       <li><a href="#">Diary</a></li>
       <li><a href="#">Till</a></li>
     </ul>
-    <div class="container main">
-      <div class="container main_patient_info">
-        <h5>Patient Info</h5>
-        
-        Name: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="name" 
-          value="{{ patient.patient_name }}" >
-        
-        Date of Birth:
-        <br>{{ patient.DOB }}
-        <br>
+    <div class="main">
+    <div class="left_section">
+      <div class="info">
+         <h5>Patient Info</h5>
+          
+          Name: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="name" 
+            value="{{ patient.patient_name }}" >
+          
+          Date of Birth:
+          {{ patient.DOB }}
+          <br>
 
-        Occupation: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="occupation" 
-          value="{{ patient.occupation }}" >
-        
+          Occupation: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="occupation" 
+            value="{{ patient.occupation }}" >
+      </div>
+      <div class="info">
         <h5>Contact Information</h5>
 
-        Telephone Number: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="telephone"
-          value="{{ patient.tel_num }}" >
+          Telephone Number: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="telephone"
+            value="{{ patient.tel_num }}" >
 
-        Home Phone Number: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="homeNumber"
-          value="{{ patient.home_num }}" >
+          Home Phone Number: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="homeNumber"
+            value="{{ patient.home_num }}" >
 
-        Address Line 1: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="address1"
-          value="{{ patient.address_line1 }}" >
+          Address Line 1: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="address1"
+            value="{{ patient.address_line1 }}" >
 
-        Address Line 2: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="address2"
-          value="{{ patient.address_line2 }}" >
+          Address Line 2: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="address2"
+            value="{{ patient.address_line2 }}" >
 
-        Address Line 3: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="address3"
-          value="{{ patient.address_line3 }}" >
-
-        <h5>Health Info</h5>
-
-        Next Appointment: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="nextApp"
-          value="{{ patient.next_app }}" >
-        
-        Recall Period: 
-        <input 
-          class="form-control mr-sm-2" 
-          name="recall"
-          value="{{ patient.recall_period }}" >
-        
-        {% if reminders is not None %}
-          Active Reminders:
-          <table class="table">
-            <thead class="thead-inverse">
-              <tr class="bg-dark text-white">
-                <th>Reminder Date</th>
-                <th>Location</th>
-                <th>Note</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for reminder in reminders %}
-                <tr>
-                  <td>
-                   {{ reminder.rem_date }}
-                  </td>
-                  <td class="align-middle">
-                    {{ reminder.location }}
-                  </td>
-                  <td class="align-middle">
-                    {{ reminder.message }}
-                  </td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        {% endif %}
-        {% for ail in ailments %}
-          {{ ail.name }}
-        {% endfor %}
-        {% for all in allergies %}
-          {{ all.name }}
-        {% endfor %}
+          Address Line 3: 
+          <input 
+            class="form-control mr-sm-2" 
+            name="address3"
+            value="{{ patient.address_line3 }}" >
       </div>
-	  </div>
+    </div>
+    <div class="right_section">
+      <div class="info">
+        <h5>Medical Info</h5>
+
+          {% if reminders is not None %}
+            Active Reminders:
+            <table class="table">
+              <thead class="thead-inverse">
+                <tr class="bg-dark text-white">
+                  <th>Reminder Date</th>
+                  <th>Location</th>
+                  <th>Note</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for reminder in reminders %}
+                  <tr>
+                    <td>
+                     {{ reminder.rem_date }}
+                    </td>
+                    <td class="align-middle">
+                      {{ reminder.location }}
+                    </td>
+                    <td class="align-middle">
+                      {{ reminder.message }}
+                    </td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          {% endif %}
+          Ailments:
+          <input 
+            class="form-control mr-sm-2" 
+            name="ailments"
+            value="
+              {% for ail in ailments %}
+                {{ ail.name }}
+              {% endfor %}
+            " >
+          Allergies:
+          <input 
+            class="form-control mr-sm-2" 
+            name="allergies"
+            value="
+              {% for all in allergies %}
+                {{ all.name }}
+              {% endfor %}
+            " >
+      </div>
+    </div>
+  </div>
 	</body>
 </html>
 
