--- a/Project/DjangoProj/static/css/Custom/Navbar2.css
+++ b/Project/DjangoProj/static/css/Custom/Navbar2.css
@@ -6,13 +6,14 @@ ul
   max-width: 20%;
   background-color: #f1f1f1;
   position: fixed;
-  height: 100%;
-  overflow: auto;
+  /*height: 100%;*/
+  /*overflow: auto;*/
 }
 
 li a 
 {
   display: block;
+  background-color: #f1f1f1;
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
