--- a/Project/DjangoProj/static/css/Custom/Patient.css
+++ b/Project/DjangoProj/static/css/Custom/Patient.css
@@ -49,10 +49,13 @@ body
 }
 
 .field_value
-{
+{/*
   border: 1px solid black;
-  border-radius: 5px;
-  width: 50%;
+  border-radius: 5px;*/
+  padding: 0.25em;
+  max-width: 70%;
+  border-left: 4px solid black;
+  background-color: #f1f1f1;
 }
 
 .main:after
