--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 	<h2>Login</h2>
+	this is login
 	<form method="post">
 		<!-- For security, to prevent CSRF attacks -->
 		{% csrf_token %}
