application always starts with login page

--- a/Project/DjangoProj/templates/patient_info.html
+++ b/Project/DjangoProj/templates/patient_info.html
@@ -101,6 +101,8 @@
                 {% endfor %}
               </tbody>
             </table>
+          {% else %}
+            this
           {% endif %}
           Ailments:
           <input 
