--- a/Project/DjangoProj/templates/patient_info.html
+++ b/Project/DjangoProj/templates/patient_info.html
@@ -5,7 +5,7 @@
     <title>Patient Info</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar2.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Custom/Patient.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Patient_info.css' %}">
   </head>
 	<body>
     <ul>
