--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -1,17 +1,32 @@
-{% extends 'base.html' %}
-
-{% block title %}Login{% endblock %}
-
-{% block content %}
-	<h2>Login</h2>
-	this is login
-	<form method="post">
-		<!-- For security, to prevent CSRF attacks -->
-		{% csrf_token %}
-
-		<!-- Form content will be outputted between <p> tags -->
-		{{ form.as_p }}
-		
-		<button type="submit">Login</button>
-	</form>
-{% endblock %}
+{% load static %}<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Login</title>
+		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+		<link rel="stylesheet" href="{% static 'css/Custom/Navbar2.css' %}">
+		<link rel="stylesheet" href="{% static 'css/Custom/Login.css' %}">
+	</head>
+	<body>
+		<ul>
+			<li><a class="active" href="#">Patient</a></li>
+			<li><a href="#">Reminders</a></li>
+			<li><a href="#">Diary</a></li>
+			<li><a href="#">Till</a></li>
+		</ul>
+		<div class="main">
+			<div class="login_section">
+				<div class="info">
+					<h4>Login</h4>
+					<form method="post">
+						<!-- For security, to prevent CSRF attacks -->
+						{% csrf_token %}
+						<!-- Form content will be outputted between <p> tags -->
+						{{ form.as_p }}
+						<button type="submit">Login</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
