--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -10,7 +10,7 @@
 		<div class="main">
 			<div class="login_section">
 				<div class="info">
-					<h4>Login</h4>
+					<span class="form_title">Welcome</span>
 					<form method="post">
 						<!-- For security, to prevent CSRF attacks -->
 						{% csrf_token %}
